@@ -46,7 +46,7 @@
 
 
 <!-- Step 3 -->
-<div id='wizardCopyHDStep3' title='Storage on physical drive' style='display: none'>
+<div id='wizardCopyHDStep3' title='Storage on physical hard drive' style='display: none'>
 
 	<p class='translate'>Please choose whether the new virtual hard drive file should grow as it is used (dynamically allocated) or if it should be created at its maximum size (fixed size).</p>
 	
@@ -82,9 +82,7 @@
 				<td style='width: 100%; white-space: nowrap'>
 					<input type='text' class='vboxText' name='wizardCopyHDLocation' style='width: 100%'/>
 				</td>
-				<td style='width: auto; white-space: nowrap;' class='vboxFileFolderInput'>
-					<input type="button" class="vboxImgButton" style="background-image: url(images/vbox/select_file_16px.png)" onClick="wizardCopyHDBrowseLocation()" />
-				</td>
+				<td style='width: 1%;' id='newVMDiskVMMDest'></td>
 			</tr>
 		</table>
 	</div>	
@@ -108,24 +106,30 @@ for(var i = 0; i < vboxHDTypes.length; i++) {
 // Select default HD format and place it at the top
 vboxHDTypesTbl.find('input[value='+$('#vboxPane').data('vboxSystemProperties').defaultHardDiskFormat+']').prop('checked',true).closest('tr').detach().prependTo(vboxHDTypesTbl);
 
-var sButtons = new Array(
-	{
-		/* Add Attachment Button */
-		'name' : 'mselecthdbtn',
-		'label' : trans('Choose a location for new virtual hard drive file...','UIWizardNewVD'),
-		'icon' : 'select_file',
-		'click' : function () {
-			vboxMedia.actions.choose(null,'HardDisk',function(med){
-				if(med) copyHDFillDisks(med.base);
-			});
-		}
-	}		
-);
 
-var wizardCopyHDToolbar = new vboxToolbarSmall(sButtons);
-wizardCopyHDToolbar.disabledString = 'dis';
-wizardCopyHDToolbar.addButtons('newVMDiskVMM');		
+/* Choose virtual hard drive button */
+new vboxToolbarSingle({
+	'name' : 'mselecthdbtn',
+	'label' : trans('Choose a virtual hard drive file to copy...','UIWizardCloneVD'),
+	'icon' : 'select_file',
+	'click' : function () {
+		vboxMedia.actions.choose(null,'HardDisk',function(med){
+			if(med) copyHDFillDisks(med.base);
+		});
+	}
+}).renderTo('newVMDiskVMM');		
 
+/* Choose location of new file button */
+new vboxToolbarSingle({
+	'name' : 'mselecthdbtn',
+	'label' : trans('Choose a location for new virtual hard drive file...','UIWizardNewVD'),
+	'icon' : 'select_file',
+	'click' : function () {
+		wizardCopyHDBrowseLocation();
+	}
+}).renderTo('newVMDiskVMMDest');		
+
+	
 /* Set up disk selection box */
 function copyHDFillDisks(sel) {
 
